# aiyue-backend

./: .env.example  .gitattributes  .gitignore  main.py  pyproject.toml
app/: config.py  database.py  models.py
app/models/: music.py
app/routers/: music.py  user.py
app/schemas/: music.py
app/service/: music.py
app/utils/: openai.py  spleeter.py
scripts/: crawler_netease.py
