[project]
name = "aiyue-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.14",
    "ffmpeg>=1.4",
    "numpy<2",
    "openai>=0.28.1",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "socksio>=1.0.0",
    "spleeter>=2.4.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]
